syntax = "proto3";
package grpc;

service grpc{
    rpc SayHello (HelloRequest) returns (HelloResponse){}
}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}